# KinodynamicMotionPlanningForSpacecraftUnderConstraints

./: .gitignore  CMakeLists.txt  ConfigurationSpaceBoundaries.h  EnvSettings.h  InputParser.cpp  LICENSE  Manual.md  MeshParser.h  ObjMeshParser.cpp  ObjMeshParser.h  PathPlanningAbstractSolver.h  Pose.h  README.md  Readme.md  RrtStarSolver.cpp  RrtStarSolver.h  algorithm_config.json  components.json  main.cpp  requirements.txt
PathSimTools/: README.md  envSettings.json  initial_setup.py  main.py  materials.py  paths.json  plotTestData.py  plotTree.py  scene_script.py  show_vista_plot.py  test.py
PathSimTools/astrodynamics/: astro_dynamics_simulator.py  astro_dynamics_simulator_interface.py
PathSimTools/config_classes/: astrodynamic_config.py  base_config.py  kinodynamic_config.py
PathSimTools/input_generators/: blender_input_generator.py  solver_input_generator.py
PathSimTools/utils/: transform.py
collisionHandlers/: ICollisionHandler.h  RapidCollisionHandler.cpp  RapidCollisionHandler.h
distanceMeasurement/: EuclidianDistanceMetric.cpp  EuclidianDistanceMetric.h  IDistanceMetric.h  WeightedTranslationRotationMetric.h
distanceMeasurement /: EuclidianDistanceMetric.cpp  EuclidianDistanceMetric.h  WeightedTranslationRotationMetric.cpp
exporters/: AbstractExporter.h  DefaultExporter.cpp  DefaultExporter.h
fileParsers/animationParsers/: FbxParser.h
meshParsers/: ObjMeshParser.cpp  RapidObjMeshParser.h
nearestNeighbour/: AbstractNearestNeighbourSearch.h  BruteForceNNsearch.cpp  BruteForceNNsearch.h  MPNNsearch.cpp  MPNNsearch.h
pathGenerator/: IPathGenerator.h  UniformPathGenerator.cpp  UniformPathGenerator.h
poses/: Pose.cpp  Pose.h  PoseMath.cpp  PoseMath.h
poses/dynamic/: Animation.h  DynamicObject.cpp  DynamicObject.h  Keyframe.cpp
poses/sampling/: BiasedRandomSampler.h  DefaultRandomSampler.h  IPoseSampler.h
poses/static/: PoseMath.h
poses/static/sampling/: DefaultRandomSampler.cpp  IPoseSampler.h
solvers/: AbstractSolver.h  AbstractSolverTemplated.h
solvers/configs/: AbstractSolverConfig.cpp  AbstractSolverConfig.h  SolverFactory.cpp  SolverFactory.h
solvers/configs/treeSolverConfigs/: AbstractTreeSolverConfig.cpp  AbstractTreeSolverConfig.h
solvers/treeSolvers/: AbstractTreeSolver.cpp  AbstractTreeSolver.h  Tree.cpp  Tree.h  TreeNode.cpp  TreeNode.h
solvers/treeSolvers/RRT/: RRTsolver.cpp  RRTsolver.h
solvers/treeSolvers/RRT*/: RrtStarSolver.cpp  RrtStarSolver.h
src/: ConfigurationSpaceBoundaries.cpp  EnvSettings.h  InputParser.cpp  InputParser.h  main.cpp
src/collisionHandlers/: RapidCollisionHandler.h
src/components/: Capability.h  ComponentRegistration.cpp  ComponentRegistry.h  ComponentType.h  IComponent.h  IComponentFactory.h
src/components/agentModel/: IAgentModel.h
src/components/capabilities/: Capability.h  CapabilityManager.h
src/components/collisionHandlers/: ICollisionHandler.h  RapidCollisionHandler.cpp  RapidCollisionHandler.h  RapidCollisionHandlerFactory.cpp  RapidCollisionHandlerFactory.h
src/components/constraintsEnforcer/: ConstraintsEnforcer.cpp  ConstraintsEnforcer.h  IConstraintsEnforcer.h
src/components/costFunctions/: DistanceTimeFunction.cpp  DistanceTimeFunction.h  DistanceTimeFunctionFactory.cpp  DistanceTimeFunctionFactory.h  ICostFunction.h  ISSTcostFunction.h
src/components/derivator/: IDerivator.h
src/components/distanceMeasurement/: DefaultSpatialDistanceMetric.cpp  DefaultSpatialDistanceMetric.h  DefaultSpatialDistanceMetricFactory.h  EuclidianDistanceMetric.cpp  EuclidianDistanceMetric.h  IDistanceMetric.h  ITotalDistanceMetric.h  TemporalTransRotMetric.cpp  TemporalTransRotMetric.h  TemporalTransRotMetricFactory.cpp  TemporalTransRotMetricFactory.h  WeightedTransRotMetricFactory.cpp  WeightedTransRotMetricFactory.h  WeightedTranslationRotationMetric.cpp  WeightedTranslationRotationMetric.h
src/components/dynamicsSimulators/: DynamicsSimulator.cpp  DynamicsSimulator.h  Euler_DynamicsSimulator.h  IDynamicsSimulator.h  RK4_DynamicsSimulator.h
src/components/exporters/: ATypedExporter.h  AbstractExporter.h  DefaultDynamicExporter.cpp  DefaultDynamicExporter.h  DefaultDynamicExporterFactory.cpp  DefaultDynamicExporterFactory.h  DefaultExporter.cpp  DefaultExporter.h  DefaultExporterFactory.cpp  DefaultExporterFactory.h  IPositionExporter.h
src/components/fuelSystem/: FuelSystem.cpp  FuelSystem.h  IFuelSystem.h
src/components/interpolators/: AInterpolator.h  IInterpolator.h
src/components/nearestNeighbour/: AbstractNearestNeighbourSearch.h  BruteForceNNsearch.h  INearestNeighborSearch.h  MPNNsearch.cpp  MPNNsearch.h  MPNNsearchFactory.cpp  MPNNsearchFactory.h  TemporalMPNNsearch.cpp  TemporalMPNNsearch.h
src/components/pathGenerator/: DefaultDynamicPathGenerator.h  DefaultDynamicPathGeneratorFactory.h  IPathGenerator.h  ITreeConnectPathGenerator.h  ITreePathGenerator.h  TreeConnectPathGenerator.cpp  TreeConnectPathGenerator.h  TreeConnectPathGeneratorFactory.h  UniformPathGenerator.cpp  UniformPathGenerator.h  UniformPathGeneratorFactory.cpp  UniformPathGeneratorFactory.h
src/components/planner/: IPlanner.h
src/components/propulsionSystem/: IPropulsionSystem.h
src/components/registration/: ComponentRegistration.cpp  ComponentRegistration.h  ComponentRegistry.h
src/components/sampling/: ABiasedRandomSampler.h  ARandomSampler.h  BiasedRandomMovingTargetSampler.cpp  BiasedRandomMovingTargetSampler.h  BiasedRandomSampler.cpp  BiasedRandomSampler.h  BiasedRandomSamplerFactory.cpp  BiasedRandomSamplerFactory.h  DefaultRandomSampler.cpp  DefaultRandomSampler.h  IKeyframeSampler.h  (+4 more)
src/core/: Program.cpp  Program.h
src/dto/: ConfigurationSpaceBoundaries.h  EnvSettings.h  EnvSettingsRaw.h
src/input/: ComponentsParser.cpp  ComponentsParser.h  InputParser.cpp  InputParser.h
src/nearestNeighbour/: MPNNsearch.h
src/pathGenerator/: IPathGenerator.h
src/solvers/: AbstractSolver.h
src/utils/: AnimationUtils.h  PhysicsUtils.h  PositionUtils.h  ScalingUtils.h
test/: DerivatorTest.cpp  DynamicsSimulatorTest.cpp  GravityInteractionTest.cpp  InternalForcesComputerTest.cpp
(+496 files in other folders)
